syntax = "proto3";

option go_package = "github.com/Njunwa1/fupi.tz/redirect/proto/clicks";

import "google/api/annotations.proto";

message Click {
  string urlID = 1;
  string userAgent = 2;
  string ipAddress = 3;
  string referrer = 4;
  string deviceType = 5;
  string browser = 6;
  string os = 7;
  string country = 8;
  string city = 9;
  float latitude = 10;
  float longitude = 11;
}


message UrlClickRequest {
  string urlID = 1;
  string userAgent = 2;
  string ipAddress = 3;
  string referrer = 4;
  string deviceType = 5;
  string browser = 6;
  string os = 7;
  string country = 8;
  string city = 9;
  float latitude = 10;
  float longitude = 11;
  string shortUrl = 12;
}


message UrlClickResponse {
  string id = 1;
  string shortUrl = 2;
  string webUrl = 3;
  string iosUrl = 4;
  string androidUrl = 5;
  string password = 6;
  string expiryAt = 7;
  string customAlias = 8;
  string type = 9;
  string qrcodeUrl = 10;
}


message UserUrlRequest {
  string userId = 1;
  string shortUrl = 2;
}

message UrlClicksByBrowser {
  string browser = 1;
  int64 totalClicks = 2;
}

message UrlClicksByCountry {
  string country = 1;
  int64 totalClicks = 2;
}

message UrlClicksByDevice {
  string device = 1;
  int64 totalClicks = 2;

}

message UrlClicksByOS {
  string os = 1;
  int64 totalClicks = 2;
}


message UrlClicksByReferrer {
  string referrer = 1;
  int64 totalClicks = 2;
}

message AggregationResult {
  string date = 1;
  int64 totalClicks = 2;
  repeated UrlClicksByOS urlClicksByOS = 3;
  repeated UrlClicksByBrowser urlClicksByBrowser = 4;
  repeated UrlClicksByDevice urlClicksByDevice = 5;
  repeated UrlClicksByCountry urlClicksByCountry = 6;
}

message UrlClicksAggregates{
  UrlClickResponse urlResponse = 1;
  repeated AggregationResult results = 2;
}

service UrlClicks {
  rpc Redirect(UrlClickRequest) returns (UrlClickResponse){
    option (google.api.http) = {
      get: "/api/v1/url/get/{shortUrl}"
    };
  }


  rpc GetUserUrlWithClicks(UserUrlRequest) returns (UrlClicksAggregates){
    option (google.api.http) = {
      get: "/api/v1/url/{shortUrl}/clicks"
    };
  }

}


